Update css to improve category font size, add extensions to version control

--- a/people/demographics.ipynb
+++ b/people/demographics.ipynb
@@ -378,13 +378,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "d864a91a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "\n",
     "::: {.style=\"font-size: 0.75rem;\"}\n",
     "Approximately 16% of the Materials Engineers in the United States workforce are women. Women earn around 33% of graduate degrees in Materials Engineering, yet constitute 50% of the population. More information can be found at [Data USA](https://datausa.io/profile/soc/materials-engineers).\n",
+    "\n",
     ":::\n"
    ]
   },
