Minor fixes, addition of one photo

--- a/research/scientometrics.ipynb
+++ b/research/scientometrics.ipynb
@@ -282,10 +282,10 @@
         "# Build multiple boxes\n",
         "boxes_html = f\"\"\"\n",
         "<div style=\"display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1rem;\">\n",
-        "  {make_value_box(\"Peer-reviewed papers published since 2022\", npapers, \"fluent:document-sparkle-24-regular\", \"success\", decimals=0)}\n",
+        "  {make_value_box(\"Peer-reviewed papers published since 2022\", npapers, \"fluent:document-sparkle-24-regular\", \"warning\", decimals=0)}\n",
         "  {make_value_box(\"Conference presentations given since 2022\", npres, \"hugeicons:presentation-online\", \"info\", decimals=0)}\n",
-        "  {make_value_box(\"Theses & dissertations published since 2022\", ntheses, \"lets-icons:book-fill\", \"warning\", decimals=0)}\n",
-        "  {make_value_box(\"Datasets and open-source codes published since 2022\", ntheses, \"carbon:db2-data-sharing-group\", \"danger\", decimals=0)}\n",
+        "  {make_value_box(\"Theses & dissertations published since 2022\", ntheses, \"lets-icons:book-fill\", \"success\", decimals=0)}\n",
+        "  {make_value_box(\"Datasets and open-source codes published since 2022\", ncod, \"carbon:db2-data-sharing-group\", \"danger\", decimals=0)}\n",
         "</div>\n",
         "\"\"\"\n",
         "\n",
