--- a/research/scientometrics.ipynb
+++ b/research/scientometrics.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "8ac0d0ac",
       "metadata": {},
       "outputs": [
@@ -80,7 +80,7 @@
           "text": [
             "Fetching: https://api.zotero.org/groups/5985739/items?format=biblatex&limit=5000\n",
             "Fetching: https://api.zotero.org/groups/5985739/items?format=biblatex&limit=100&start=100\n",
-            "Saved Zotero library to zotero_group_library.bib\n",
+            "Saved Zotero library to ../files/zotero_group_library.bib\n",
             "Channels:\n",
             " - conda-forge\n",
             " - defaults\n",
@@ -153,60 +153,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "54168d71",
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "\n",
-              "<div style=\"display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1rem;\">\n",
-              "  \n",
-              "    <div class=\"value-box success\">\n",
-              "      <div class=\"top-row\">\n",
-              "        <div class=\"label\">Peer-reviewed papers published since 2022</div>\n",
-              "        <iconify-icon icon=\"fluent:document-sparkle-24-regular\"></iconify-icon>\n",
-              "      </div>\n",
-              "      <div class=\"value\">15</div>\n",
-              "    </div>\n",
-              "    \n",
-              "  \n",
-              "    <div class=\"value-box info\">\n",
-              "      <div class=\"top-row\">\n",
-              "        <div class=\"label\">Conference presentations given since 2022</div>\n",
-              "        <iconify-icon icon=\"hugeicons:presentation-online\"></iconify-icon>\n",
-              "      </div>\n",
-              "      <div class=\"value\">57</div>\n",
-              "    </div>\n",
-              "    \n",
-              "  \n",
-              "    <div class=\"value-box danger\">\n",
-              "      <div class=\"top-row\">\n",
-              "        <div class=\"label\">Theses & dissertations published since 2022</div>\n",
-              "        <iconify-icon icon=\"lets-icons:book-fill\"></iconify-icon>\n",
-              "      </div>\n",
-              "      <div class=\"value\">8</div>\n",
-              "    </div>\n",
-              "    \n",
-              "  \n",
-              "    <div class=\"value-box danger\">\n",
-              "      <div class=\"top-row\">\n",
-              "        <div class=\"label\">Datasets and open-source codes published since 2022</div>\n",
-              "        <iconify-icon icon=\"carbon:db2-data-sharing-group\"></iconify-icon>\n",
-              "      </div>\n",
-              "      <div class=\"value\">8</div>\n",
-              "    </div>\n",
-              "    \n",
-              "</div>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "execution_count": 25,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "TypeError",
+          "evalue": "unsupported format string passed to NoneType.__format__",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 73\u001b[0m\n\u001b[1;32m     68\u001b[0m ncod \u001b[38;5;241m=\u001b[39m count_in_bib(file_path, entrytypelist\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@software\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     70\u001b[0m \u001b[38;5;66;03m# Build multiple boxes\u001b[39;00m\n\u001b[1;32m     71\u001b[0m boxes_html \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;124m<div style=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdisplay:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1rem;\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>\u001b[39m\n\u001b[0;32m---> 73\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmake_value_box\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPeer-reviewed papers published since 2022\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mnpapers\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfluent:document-sparkle-24-regular\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msuccess\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mdecimals\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmake_value_box(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConference presentations given since 2022\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mnpres,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhugeicons:presentation-online\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minfo\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mdecimals\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmake_value_box(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTheses & dissertations published since 2022\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mntheses,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlets-icons:book-fill\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwarning\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mdecimals\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmake_value_box(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatasets and open-source codes published since 2022\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mncod,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcarbon:db2-data-sharing-group\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdanger\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39mdecimals\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;124m</div>\u001b[39m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     80\u001b[0m HTML(boxes_html)\n",
+            "Cell \u001b[0;32mIn[2], line 27\u001b[0m, in \u001b[0;36mmake_value_box\u001b[0;34m(title, value, icon_name, theme, decimals)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmake_value_box\u001b[39m(title, value, icon_name, theme, decimals\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m     26\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return HTML for a value box with an icon.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;124m    <div class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue-box \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtheme\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>\u001b[39m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;124m      <div class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop-row\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>\u001b[39m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124m        <div class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtitle\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m</div>\u001b[39m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;124m        <iconify-icon icon=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00micon_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m></iconify-icon>\u001b[39m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;124m      </div>\u001b[39m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;124m      <div class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdecimals\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mf\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m</div>\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;124m    </div>\u001b[39m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;124m    \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to NoneType.__format__"
+          ]
         }
       ],
       "source": [
@@ -2009,8 +1970,7 @@
     "kernelspec": {
       "display_name": "card-lab",
       "language": "python",
-      "name": "card-lab",
-      "path": "/usr/local/share/jupyter/kernels/card-lab"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
