Add monogram to slideshow

--- a/easteregg.qmd
+++ b/easteregg.qmd
@@ -55,7 +55,7 @@ Presently, there’s a drive toward control or leadership in the mental/creative
 
 * J♦ *(Messenger, curiosity, learning phase)*
 This shows active intellectual curiosity or communication underway. You’re gathering information or delivering a message.
-* A♠ ((Major insight, breakthrough, truth, transformation)*
+* A♠ *(Major insight, breakthrough, truth, transformation)*
 At the heart of the matter is a significant mental or spiritual breakthrough. This card often indicates a radical revelation or truth that changes the path.
 * Q♠ *(Wisdom, complexity, possibly a challenging feminine figure or insight)*
 This queen can represent mature intellect, deep intuition, or a situation requiring careful judgment. There might be a need for strategic thinking or emotional control.
@@ -117,12 +117,12 @@ In cartomancy, the **Ace of Spades** is traditionally the most powerful and tran
 
 > “The awakening of the mind — a moment of sharp clarity that cuts away confusion and reveals truth.”
 
-In the context of your full grid:
-	•	It sat at the center of the spread — the pivot around which all other energies orbit.
-	•	It signifies a threshold moment: where old knowledge or patterns are shattered to make way for a higher order of thinking.
-	•	It connects equally to the rational intellect (♠) and to spiritual transformation.
+In the context of the 9-card grid:
+* It sat at the center of the spread — the pivot around which all other energies orbit.
+* It signifies a threshold moment: where old knowledge or patterns are shattered to make way for a higher order of thinking.
+* It connects equally to the rational intellect (♠) and to spiritual transformation.
 
-Also, it's a really fun song by the proto-metal band [*Motörhead*](https://en.wikipedia.org/wiki/Motörhead). While in my first faculty position, I played in a band that covered this song live. The band Motörhead serves as a good example of one of my yet-unproven theories about English speakers: They are fascinated by diacritics. I have made many observations of English speakers seeking out opportunities to add [diacritics](https://en.wikipedia.org/wiki/Diacritic), but their misunderstanding of their use results in them being placed where they are not needed. I call this "[umlaut envy](https://en.wikipedia.org/wiki/Umlaut_(diacritic))."
+Also, it's a really fun song by the proto-metal band [*Motörhead*](https://en.wikipedia.org/wiki/Motörhead). While in my first faculty position, I played in a band that covered this song live. The band Motörhead serves as a good example of one of my yet-unproven theories about English speakers: They are fascinated by diacritics. I have made many observations of English speakers seeking out opportunities to add [diacritics](https://en.wikipedia.org/wiki/Diacritic), but their misunderstanding of their use results in them being placed where they are not needed. I call this "[umlaut envy](https://en.wikipedia.org/wiki/Umlaut_(diacritic))."^[Wouldn't it be better if it was *ümlaut*? Seems like a missed opportunity.]
 
 As a bass player who loves good tube amp tone, I'll end this page by noting that Lemmy Kilmister (of Motörhead) played a [Rickenbacker 4001 bass](https://reverb.com/m/rickenbacker/bass-guitars/4001--20558) through a [Marshall JMP Super Bass 100W tube amplifier](https://reverb.com/p/marshall-1992-jmp-super-bass). One day, I would like to play through this set up.
 
