--- a/files/photos/Research_Group_Timeline_Slideshow.qmd
+++ b/files/photos/Research_Group_Timeline_Slideshow.qmd
@@ -3,6 +3,7 @@ title: "Critical Alloy Research & Discovery Lab Timeline Slideshow"
 format:
   revealjs:
     transition: fade
+    logo: ../brand/uc-monogram.png
     auto-slide: 3500
     smaller: true
     loop: true
@@ -158,7 +159,6 @@ def generate_markdown(images):
         caption = get_caption(img_path)
         lines.append(f":::{{.center style=\"text-align: center;\"}}\n## {title}\n\n![{caption}]({IMAGE_DIR}{os.sep}{rel_path})\n:::\n")
     return "\n".join(lines)
-
 
 images = sorted([
     p for p in IMAGE_DIR.rglob("*")
