--- a/people/current/Nick_Jackson.qmd
+++ b/people/current/Nick_Jackson.qmd
@@ -10,6 +10,13 @@ about:
   template: trestles
   image: ../../files/photos/People/Nick_Jackson.jpg
   image-shape: round
+  links:
+    - text: "{{< iconify mdi linkedin >}}"
+      url: https://www.linkedin.com/in/nicholas-jackson-4a7913250
+    - text: "![](https://flagcdn.com/us.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/United_States_of_America
+    - text: "![](https://flagcdn.com/us-oh.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Ohio
 
 ---
 
