--- a/people/current/Nishat_Sultana.qmd
+++ b/people/current/Nishat_Sultana.qmd
@@ -36,7 +36,7 @@ about:
 <?xml version="1.0"?>
 <div class="csl-bib-body" style="line-height: 1.35; ">
   <div class="csl-entry" style="clear: left; ">
-    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">N. Sultana, A. A. Amin, E. J. Payton, and W. K. Kim, &#x201C;Prediction of {Raman} signatures, electronic structure, and ion transport mechanisms in Nb$_2$C and Nb$_2$CO$_2$ {MXenes} for {Li}/{Na}-ion batteries: An <i>Ab Initio</i> study,&#x201D; <i>Journal of Physics and Chemistry of Solids</i>, vol. 209, p. 113218, 2026, doi: 10.1016/j.jpcs.2025.113218.</div>
+    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">N. Sultana, A. A. Amin, E. J. Payton, and W. K. Kim, &#x201C;Prediction of {Raman} signatures, electronic structure, and ion transport mechanisms in Nb$_2$C and Nb$_2$CO$_2$ {MXenes} for {Li}/{Na}-ion batteries: An <i>Ab Initio</i> study,&#x201D; <i>Journal of Physics and Chemistry of Solids</i>, vol. 209, p. 113218, Feb. 2026, doi: 10.1016/j.jpcs.2025.113218.</div>
   </div>
 </div>
 ```
