--- a/people/current/Yuval_Noiman.qmd
+++ b/people/current/Yuval_Noiman.qmd
@@ -19,10 +19,10 @@ about:
       url: https://en.wikipedia.org/wiki/United_States_of_America
     - text: "![](https://flagcdn.com/il.svg){width=0.25in}"
       url: https://en.wikipedia.org/wiki/State_of_Israel
-    - text: "![](https://flagcdn.com/us-oh.svg){width=0.25in}"
-      url: https://en.wikipedia.org/wiki/Ohio
     - text: "![](https://flagcdn.com/us-ca.svg){width=0.25in}"
       url: https://en.wikipedia.org/wiki/California
+    - text: "![](https://flagcdn.com/us-oh.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Ohio
 
 ---
 
@@ -33,7 +33,7 @@ about:
 <?xml version="1.0"?>
 <div class="csl-bib-body" style="line-height: 1.35; ">
   <div class="csl-entry" style="clear: left; ">
-    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">S. Josyula, Y. Noiman, E. Payton, and T. Giovannelli, &#x201C;Comparison of derivative-free and gradient-based minimization for multi-objective compositional design of shape memory alloys,&#x201D; <i>Computational Materials Science</i>, vol. in press, Oct. 2025, [Online]. Available: https://arxiv.org/abs/2508.14127</div>
+    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">S. Josyula, Y. Noiman, E. Payton, and T. Giovannelli, &#x201C;Comparison of derivative-free and gradient-based minimization for multi-objective compositional design of shape memory alloys,&#x201D; <i>Com Mater Sci</i>, vol. 261, p. 114297, Jan. 2026, doi: 10.1016/j.commatsci.2025.114297.</div>
   </div>
 </div>
 ```
