--- a/people/alumni/Jesus_Acosta.qmd
+++ b/people/alumni/Jesus_Acosta.qmd
@@ -4,14 +4,18 @@ categories: ["BS - Undergraduate Part-Time Research (Paid)"]
 date: 2024-05-15 00:00:00
 execute:
   echo: false
-image: ../../files/photos/People/anon.jpg
+image: ../../files/photos/People/Jesus_Acosta.jpg
 about:
   template: trestles
-  image: ../../files/photos/People/anon.jpg
+  image: ../../files/photos/People/Jesus_Acosta.jpg
   image-shape: round
   links:
     - text: "{{< iconify mdi linkedin >}}"
       url: https://www.linkedin.com/in/jesus-acosta1908
+    - text: "![](https://flagcdn.com/us.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/United_States_of_America
+    - text: "![](https://flagcdn.com/us-oh.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Ohio
 
 ---
 
