--- a/people/alumni/Sravya_Josyula.qmd
+++ b/people/alumni/Sravya_Josyula.qmd
@@ -14,6 +14,18 @@ about:
       url: https://www.linkedin.com/in/sravyajosyula
     - text: "{{< iconify simple-icons orcid >}}"
       url: https://orcid.org/0009-0001-6998-0559
+    - text: "![](https://flagcdn.com/us.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/United_States_of_America
+    - text: "![](https://flagcdn.com/in.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Republic_of_India
+    - text: "![](https://flagcdn.com/us-pa.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Pennsylvania
+    - text: "![](https://flagcdn.com/us-ca.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/California
+    - text: "![](https://flagcdn.com/us-tx.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Texas
+    - text: "![](https://flagcdn.com/us-oh.svg){width=0.25in}"
+      url: https://en.wikipedia.org/wiki/Ohio
 
 ---
 
@@ -35,7 +47,7 @@ about:
 <?xml version="1.0"?>
 <div class="csl-bib-body" style="line-height: 1.35; ">
   <div class="csl-entry" style="clear: left; ">
-    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">S. Josyula, Y. Noiman, E. Payton, and T. Giovannelli, &#x201C;Comparison of derivative-free and gradient-based minimization for multi-objective compositional design of shape memory alloys,&#x201D; <i>Computational Materials Science</i>, vol. in press, Oct. 2025, [Online]. Available: https://arxiv.org/abs/2508.14127</div>
+    <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[1]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">S. Josyula, Y. Noiman, E. Payton, and T. Giovannelli, &#x201C;Comparison of derivative-free and gradient-based minimization for multi-objective compositional design of shape memory alloys,&#x201D; <i>Com Mater Sci</i>, vol. 261, p. 114297, Jan. 2026, doi: 10.1016/j.commatsci.2025.114297.</div>
   </div>
   <div class="csl-entry" style="clear: left; ">
     <div class="csl-left-margin" style="float: left; padding-right: 0.5em; text-align: right; width: 1em;">[2]</div><div class="csl-right-inline" style="margin: 0 .4em 0 1.5em;">U. P. Ochieze <i>et al.</i>, &#x201C;Microstructural, oxidation, and mechanical behavior of NbTi-based refractory alloys with 5 to 10 pct Co, Cr, and Ni additions,&#x201D; <i>Metall Mater Trans A</i>, vol. 56, no. 4, pp. 1150&#x2013;1170, Apr. 2025, doi: 10.1007/s11661-025-07705-8.</div>
